--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -4,21 +4,6 @@ body {
   padding: 0;
 }
 
-.nav__image {
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-}
-
-.nav__loc {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
-  background-color: #EAEAEA;
-  gap: 17px;
-}
-
 header {
   background-color: #f6f6f6;
   display: flex;
@@ -65,7 +50,7 @@ header .header__button {
   background-color: #f6f6f6;
   margin: 10px;
 }
-.restaurant .restaurant__main {
+.restaurant__main {
   width: 90%;
 }
 .restaurant .restaurant__list {
@@ -87,4 +72,19 @@ header .header__button {
   width: 100%;
   height: 230px;
   border-radius: 30px 30px 0 0;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.nav__image {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav__loc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+  background-color: #EAEAEA;
+  gap: 17px;
+}/*# sourceMappingURL=main.css.map */
