--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -1,7 +1,27 @@
+* {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+}
+body .body__div {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.buttons {
+  color: white;
+  text-decoration: none;
+  border: 2px solid none;
+  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  border-radius: 30px;
+  padding: 15px;
 }
 
 header {
@@ -21,9 +41,33 @@ header .header__button {
   color: white;
   text-decoration: none;
   border: 2px solid none;
-  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 50%);
+  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
   border-radius: 30px;
   padding: 15px;
+}
+
+footer {
+  background-color: #353535;
+  color: white;
+  padding-bottom: 5px;
+}
+footer h3 {
+  font-family: "Shrikhand", cursive;
+  margin-left: 20px;
+  padding-top: 20px;
+}
+footer ul {
+  padding: 20px;
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+footer ul li {
+  list-style: none;
+}
+footer ul li .fa-solid {
+  margin-right: 5px;
 }
 
 .fonctionnement {
@@ -37,7 +81,7 @@ header .header__button {
   justify-content: space-evenly;
   padding: 20px;
   border-radius: 20px;
-  background-color: #d8d7d7;
+  background-color: #F6F6F6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
 }
 .fonctionnement .fa-store {
@@ -46,22 +90,37 @@ header .header__button {
 
 .restaurant {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #f6f6f6;
   margin: 10px;
+  padding-bottom: 40px;
 }
 .restaurant__main {
   width: 90%;
 }
-.restaurant .restaurant__list {
+.restaurant__list {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-.restaurant .restaurant__cards {
+.restaurant__cards {
   background-color: white;
   border-radius: 30px;
   width: 100%;
+}
+.restaurant__nom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.restaurant__content {
+  padding: 10px;
+}
+.restaurant__content h3, .restaurant__content p {
+  margin: 5px;
+}
+.restaurant__like {
+  padding: 10px;
 }
 .restaurant article {
   border-radius: 20px;
@@ -87,4 +146,49 @@ header .header__button {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
   background-color: #EAEAEA;
   gap: 17px;
+}
+
+.nav__restaurant {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+.carte__title {
+  font-family: "Shrikhand", cursive;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 15px 0 15px;
+}
+
+.carte {
+  margin-bottom: 40px;
+}
+
+.button__position {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.position {
+  margin-left: 15px;
+}
+
+.card {
+  margin: 10px;
+  gap: 10px;
+  padding: 10px 15px 10px 15px;
+  border-radius: 20px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+}
+.card h3, .card p {
+  padding: 0;
+  margin: 0;
+}
+.card__contenu {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 5px;
 }/*# sourceMappingURL=main.css.map */
