--- a/SaSS/layout/_fonctionnement.scss
+++ b/SaSS/layout/_fonctionnement.scss
@@ -8,7 +8,7 @@
         justify-content: space-evenly;
         padding: 20px;
         border-radius: 20px;
-        background-color: #d8d7d7;
+        background-color: #F6F6F6;
         box-shadow: 0px 4px 15px 0px #00000026;
     }
     .fa-store{
