--- a/SaSS/layout/_list-restaurants.scss
+++ b/SaSS/layout/_list-restaurants.scss
@@ -1,24 +1,38 @@
 .restaurant{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #f6f6f6;
     margin: 10px;
+    padding-bottom: 40px;
     &__main{
         width: 90%;
     }
 
-    .restaurant__list{
+    &__list{
         display: flex;
         flex-wrap: wrap;
         gap: 20px;
     }
 
-    .restaurant__cards{
+    &__cards{
         background-color: white;
         border-radius: 30px;
         width: 100%;
     }
-
+    &__nom{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__content{
+        padding: 10px;
+        h3,p{
+            margin: 5px;
+        }
+    }
+    &__like{
+        padding: 10px;
+    }
     article{
         border-radius: 20px;
         img{
