--- a/SaSS/base/_colors.scss
+++ b/SaSS/base/_colors.scss
@@ -2,3 +2,5 @@ $primary-color:#9356DC;
 $secondary-color:#FF79DA;
 $tertiary-color:#99E2D0;
 $footer-color:#353535;
+$gradiant-color:(180deg,rgba(255, 121, 218, 1) 0%, rgba(147, 86, 220, 1) 100%);
+$subtle-color:#99E2D0;
