--- a/SaSS/layout/_footer.scss
+++ b/SaSS/layout/_footer.scss
@@ -2,6 +2,7 @@ footer{
     background-color: $footer-color;
     color: white;
     padding-bottom: 5px;
+    margin-top: 0;
     h3{
         font-family: $font-title;
         margin-left: 20px;
