--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -45,11 +45,11 @@ header .header__button {
   border-radius: 30px;
   padding: 15px;
 }
-
 footer {
   background-color: #353535;
   color: white;
   padding-bottom: 5px;
+  margin-top: 0;
 }
 footer h3 {
   font-family: "Shrikhand", cursive;
@@ -174,6 +174,21 @@ footer ul li .fa-solid {
 
 .position {
   margin-left: 15px;
+  font-weight: 300;
+  font-size: 16px;
+  display: inline-block;
+  position: relative;
+  padding-bottom: 5px;
+}
+
+.position::after {
+  content: "";
+  left: 0;
+  bottom: 0;
+  width: 60%;
+  height: 2px;
+  background-color: #99E2D0;
+  position: absolute;
 }
 
 .card {
@@ -183,12 +198,42 @@ footer ul li .fa-solid {
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
 }
-.card h3, .card p {
+.card h3, .card .card__prix {
+  font-size: 18px;
+  font-weight: 400;
   padding: 0;
   margin: 0;
+}
+.card p {
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 30;
+}
+.card .card__prix {
+  font-size: 15px;
 }
 .card__contenu {
   display: flex;
   justify-content: space-between;
   padding-top: 5px;
+}
+
+.restaurant__pics {
+  width: 100%;
+  height: auto;
+}
+.restaurant__pics img {
+  width: 100%;
+  height: 230px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.section__pics {
+  position: relative;
+  margin-top: -40px;
+  background-color: #F6F6F6;
+  border-radius: 20px 20px 0 0;
+  padding-bottom: 0px;
 }/*# sourceMappingURL=main.css.map */
