--- a/SaSS/components/_button.scss
+++ b/SaSS/components/_button.scss
@@ -5,4 +5,6 @@
     background: linear-gradient(180deg,rgba(255, 121, 218, 1) 0%, rgba(147, 86, 220, 1) 100%);
     border-radius: 30px;
     padding: 15px;
+    width: 200px;
+    text-align: center;
 }
