--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -58,3 +58,11 @@
         padding-top: 5px;
     }
 }
+
+@media(min-width: 1440px){
+    .restaurant__main{
+        width: 800px;
+        margin: auto;
+        padding-bottom: 10px;
+    }
+}
