--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -61,8 +61,19 @@
 
 @media(min-width: 1440px){
     .restaurant__main{
-        width: 800px;
-        margin: auto;
-        padding-bottom: 10px;
+        width: 1200px;
+    }
+    .restaurant__cards{
+        width: 490px;
+    }
+    .restaurant__list{
+        flex-wrap: wrap;
+        gap: 40px;
+        justify-content: center;
+    }
+    .restaurant__title{
+        
+        padding-left: 90px;
+        margin-bottom: 20px;
     }
 }
