--- a/SaSS/layout/_list-restaurants.scss
+++ b/SaSS/layout/_list-restaurants.scss
@@ -44,3 +44,22 @@
     }
 }
 
+@media(min-width: 1440px){
+    .restaurant__main{
+        display: flex;
+        flex-wrap: wrap;
+        width: 1200px;
+        gap: 40px;
+    }
+    .restaurant__cards{
+        width: 490px;
+    }
+    .restaurant__list{
+        gap: 40px;
+        justify-content: center;
+    }
+    .restaurant__title{
+        padding-left: 90px;
+        margin-top: 20px;
+    }
+}
