--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -154,6 +154,25 @@ footer ul li .fa-solid {
   border-radius: 30px 30px 0 0;
 }
 
+@media (min-width: 1440px) {
+  .restaurant__main {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1200px;
+    gap: 40px;
+  }
+  .restaurant__cards {
+    width: 490px;
+  }
+  .restaurant__list {
+    gap: 40px;
+    justify-content: center;
+  }
+  .restaurant__title {
+    padding-left: 90px;
+    margin-top: 20px;
+  }
+}
 .nav__image {
   padding: 15px;
   display: flex;
@@ -244,20 +263,14 @@ footer ul li .fa-solid {
 }
 
 @media (min-width: 1440px) {
-  .restaurant__main {
+  .section__pics {
     width: 1200px;
+    margin: auto;
+    margin-top: -40px;
   }
-  .restaurant__cards {
-    width: 490px;
-  }
-  .restaurant__list {
-    flex-wrap: wrap;
-    gap: 40px;
-    justify-content: center;
-  }
-  .restaurant__title {
-    padding-left: 90px;
-    margin-bottom: 20px;
+  .card {
+    width: 80%;
+    margin: auto;
   }
 }
 .restaurant__pics {
