feat: finalisation des pages restaurants - version desktop

--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -68,6 +68,15 @@
     .card{
         width: 80%;
         margin: auto;
+        margin-bottom: 10px;
+        
+    }
+    .carte__menu{
+        margin-left: 90px;
+    }
+    .carte__title{
+        justify-content:center;
+        gap:20px;
     }
 }
 
