--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -271,6 +271,14 @@ footer ul li .fa-solid {
   .card {
     width: 80%;
     margin: auto;
+    margin-bottom: 10px;
+  }
+  .carte__menu {
+    margin-left: 90px;
+  }
+  .carte__title {
+    justify-content: center;
+    gap: 20px;
   }
 }
 .restaurant__pics {
