feat: finalisation des cards fonctionnement

--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -86,16 +86,32 @@ footer ul li .fa-solid {
   flex-direction: column;
   gap: 20px;
 }
-.fonctionnement .fonctionnement__list {
+.fonctionnement__list {
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   padding: 20px;
   border-radius: 20px;
   background-color: #F6F6F6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+  margin-left: 10px;
 }
 .fonctionnement .fa-store {
   color: #9356DC;
+}
+.fonctionnement__number {
+  position: absolute;
+  left: -12px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #9356DC;
+  color: white;
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 @media (min-width: 1440px) {
@@ -106,7 +122,7 @@ footer ul li .fa-solid {
     gap: 50px;
   }
   .fonction__desktop .fonctionnement__list {
-    width: 33%;
+    width: 20%;
   }
 }
 .restaurant {
