--- a/SaSS/layout/_fonctionnement.scss
+++ b/SaSS/layout/_fonctionnement.scss
@@ -3,16 +3,32 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    .fonctionnement__list{
+    &__list{
+        position: relative;
         display: flex;
         justify-content: space-evenly;
         padding: 20px;
         border-radius: 20px;
         background-color: #F6F6F6;
         box-shadow: 0px 4px 15px 0px #00000026;
+        margin-left: 10px;
     }
     .fa-store{
         color: $primary-color;
+    }
+    &__number{
+        position: absolute;
+        left: -12px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #9356DC;
+        color: white;
+        border-radius: 50%;
+        font-size: 14px;
+        font-weight: bold;
     }
 }
 
@@ -24,7 +40,7 @@
         gap: 50px;
 
         .fonctionnement__list{
-            width: 33%;
+            width: 20%;
         }
     }
 }
