--- a/SaSS/components/_button.scss
+++ b/SaSS/components/_button.scss
@@ -2,7 +2,7 @@
     color: white;
     text-decoration: none;
     border: 2px solid none;
-    background: linear-gradient(180deg,rgba(255, 121, 218, 1) 0%, rgba(147, 86, 220, 1) 100%);
+    background: $gradient-color;
     border-radius: 30px;
     padding: 15px;
     width: 200px;
