--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -26,6 +26,23 @@ body .body__div {
   text-align: center;
 }
 
+/* carte des restaurant/ index */
+.restaurant__cards {
+  transition: transform 300ms;
+}
+.restaurant__cards:hover {
+  transform: scale(1.05);
+}
+
+/*coeur*/
+/* bouttons toutes les pages*/
+.buttons {
+  transition: filtre 0.3s;
+}
+.buttons:hover {
+  filter: brightness(1.07);
+}
+
 header {
   background-color: #f6f6f6;
   display: flex;
@@ -39,14 +56,7 @@ header .header__content {
   align-items: center;
   justify-content: center;
 }
-header .header__button {
-  color: white;
-  text-decoration: none;
-  border: 2px solid none;
-  background: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
-  border-radius: 30px;
-  padding: 15px;
-}
+
 footer {
   background-color: #353535;
   color: white;
