--- a/SaSS/main.scss
+++ b/SaSS/main.scss
@@ -2,6 +2,7 @@
 @import "base/body";
 
 @import "components/button";
+@import "components/animation";
 
 @import "layout/header";
 @import "layout/footer";
