--- a/SaSS/layout/_fonctionnement.scss
+++ b/SaSS/layout/_fonctionnement.scss
@@ -42,5 +42,9 @@
         .fonctionnement__list{
             width: 20%;
         }
+        
     }
+    .fonctionnement__title{
+            padding-left: 320px;
+        }
 }
