--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -28,15 +28,17 @@
     bottom: 0;
     width: 60%;
     height: 2px;
-    background-color: $subtle-color;
+    background-color: $tertiary-color;
     position: absolute;
 }
 .card{
+    position:relative;
     margin: 10px;
     gap: 10px;
     padding:10px 15px 10px 15px;
     border-radius: 20px;
     box-shadow: 0px 4px 15px 0px #00000026;
+    overflow: hidden;
     h3,.card__prix{
         font-size: 18px;
         font-weight: 400;
@@ -51,13 +53,16 @@
     }
     .card__prix{
         font-size: 15px;
+        white-space: nowrap;
     }
     &__contenu{
         display: flex;
         justify-content: space-between;
         padding-top: 5px;
     }
+    
 }
+
 
 @media(min-width: 1440px){
     .section__pics{
