--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -43,6 +43,22 @@ body .body__div {
   filter: brightness(1.07);
 }
 
+/* volet sur les plats*/
+.card:hover .volet__hover {
+  width: 60px;
+}
+
+.volet__hover {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0px;
+  height: 100%;
+  background-color: #99E2D0;
+  border-radius: 0 20px 20px 0;
+  transition: width 200ms;
+}
+
 header {
   background-color: #f6f6f6;
   display: flex;
@@ -133,6 +149,9 @@ footer ul li .fa-solid {
   }
   .fonction__desktop .fonctionnement__list {
     width: 20%;
+  }
+  .fonctionnement__title {
+    padding-left: 320px;
   }
 }
 .restaurant {
@@ -261,11 +280,13 @@ footer ul li .fa-solid {
 }
 
 .card {
+  position: relative;
   margin: 10px;
   gap: 10px;
   padding: 10px 15px 10px 15px;
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+  overflow: hidden;
 }
 .card h3, .card .card__prix {
   font-size: 18px;
@@ -281,6 +302,7 @@ footer ul li .fa-solid {
 }
 .card .card__prix {
   font-size: 15px;
+  white-space: nowrap;
 }
 .card__contenu {
   display: flex;
