style: ajout de l'animation du coeur sur la page d'accueil

--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -54,6 +54,8 @@
     .card__prix{
         font-size: 15px;
         white-space: nowrap;
+        transition:width 200ms ;
+        
     }
     &__contenu{
         display: flex;
