--- a/SaSS/components/_animation.scss
+++ b/SaSS/components/_animation.scss
@@ -9,6 +9,15 @@
 
 /*coeur*/
 
+.restaurant__like:hover{
+    .coeur{
+        opacity: 0;
+    }
+    .coeur__hover{
+        opacity: 1;
+    }
+}
+
 /* bouttons toutes les pages*/
 
 .buttons{
@@ -20,9 +29,13 @@
 
 /* volet sur les plats*/
 .card:hover{ 
-        .volet__hover{
-            width:60px;
-        }
+    .volet__hover{
+        width:60px;
+    }
+    .card__prix{
+        width: 90px;
+    }
+        
     }
 
 .volet__hover{
