--- a/SaSS/layout/_list-restaurants.scss
+++ b/SaSS/layout/_list-restaurants.scss
@@ -32,7 +32,13 @@
     }
     &__like{
         padding: 10px;
+        position: relative;
+        cursor: pointer;
+        width: 15px;
+        height: auto;
+        display: inline-flex;
     }
+    
     article{
         border-radius: 20px;
         img{
@@ -42,6 +48,23 @@
             border-radius: 30px 30px 0 0;
         }
     }
+}
+.like{
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 20px;
+    transition: opacity 200ms ease;
+}
+.coeur{
+    opacity: 1;
+}
+.coeur__hover{
+    opacity: 0;
+    background-image: $gradient-color;
+    -webkit-background-clip: text;
+    color: transparent;
+    display: inline-block;
 }
 
 @media(min-width: 1440px){
