--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -35,6 +35,13 @@ body .body__div {
 }
 
 /*coeur*/
+.restaurant__like:hover .coeur {
+  opacity: 0;
+}
+.restaurant__like:hover .coeur__hover {
+  opacity: 1;
+}
+
 /* bouttons toutes les pages*/
 .buttons {
   transition: filtre 0.3s;
@@ -46,6 +53,9 @@ body .body__div {
 /* volet sur les plats*/
 .card:hover .volet__hover {
   width: 60px;
+}
+.card:hover .card__prix {
+  width: 90px;
 }
 
 .volet__hover {
@@ -187,6 +197,11 @@ footer ul li .fa-solid {
 }
 .restaurant__like {
   padding: 10px;
+  position: relative;
+  cursor: pointer;
+  width: 15px;
+  height: auto;
+  display: inline-flex;
 }
 .restaurant article {
   border-radius: 20px;
@@ -197,6 +212,26 @@ footer ul li .fa-solid {
   width: 100%;
   height: 230px;
   border-radius: 30px 30px 0 0;
+}
+
+.like {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 20px;
+  transition: opacity 200ms ease;
+}
+
+.coeur {
+  opacity: 1;
+}
+
+.coeur__hover {
+  opacity: 0;
+  background-image: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  -webkit-background-clip: text;
+  color: transparent;
+  display: inline-block;
 }
 
 @media (min-width: 1440px) {
@@ -303,6 +338,7 @@ footer ul li .fa-solid {
 .card .card__prix {
   font-size: 15px;
   white-space: nowrap;
+  transition: width 200ms;
 }
 .card__contenu {
   display: flex;
