--- a/SaSS/layout/_list-restaurants.scss
+++ b/SaSS/layout/_list-restaurants.scss
@@ -49,22 +49,9 @@
         }
     }
 }
-.like{
+.coeur__list{
     position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 20px;
-    transition: opacity 200ms ease;
-}
-.coeur{
-    opacity: 1;
-}
-.coeur__hover{
-    opacity: 0;
-    background-image: $gradient-color;
-    -webkit-background-clip: text;
-    color: transparent;
-    display: inline-block;
+    right: 7px;
 }
 
 @media(min-width: 1440px){
