--- a/SaSS/main.scss
+++ b/SaSS/main.scss
@@ -3,6 +3,7 @@
 
 @import "components/button";
 @import "components/animation";
+@import "components/like";
 
 @import "layout/header";
 @import "layout/footer";
