--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -69,6 +69,37 @@ body .body__div {
   transition: width 200ms;
 }
 
+/*.like__conteneur {
+    position: relative; 
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: auto; 
+    height: auto;
+    cursor: pointer;
+    padding: 10px;
+  bottom:2px;
+
+  & i{
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 20px;
+    transition: opacity 200ms ease;
+  }
+  .coeur{
+   position: absolute;
+  opacity: 1;
+  top:0px;
+  }
+  .coeur__hover{
+  position: absolute;
+  opacity: 0;
+  color: green;
+  display: inline-block;
+  bottom: 0px;
+  }
+}*/
 header {
   background-color: #f6f6f6;
   display: flex;
@@ -214,24 +245,9 @@ footer ul li .fa-solid {
   border-radius: 30px 30px 0 0;
 }
 
-.like {
+.coeur__list {
   position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 20px;
-  transition: opacity 200ms ease;
-}
-
-.coeur {
-  opacity: 1;
-}
-
-.coeur__hover {
-  opacity: 0;
-  background-image: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
-  -webkit-background-clip: text;
-  color: transparent;
-  display: inline-block;
+  right: 7px;
 }
 
 @media (min-width: 1440px) {
@@ -344,6 +360,26 @@ footer ul li .fa-solid {
   display: flex;
   justify-content: space-between;
   padding-top: 5px;
+}
+
+.like {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 20px;
+  transition: opacity 200ms ease;
+}
+
+.coeur {
+  opacity: 1;
+}
+
+.coeur__hover {
+  opacity: 0;
+  background-image: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  -webkit-background-clip: text;
+  color: transparent;
+  display: inline-block;
 }
 
 @media (min-width: 1440px) {
