--- a/SaSS/main.scss
+++ b/SaSS/main.scss
@@ -1,9 +1,9 @@
+@import"components/loader";
 @import "base/colors";
 @import "base/body";
 
 @import "components/button";
 @import "components/animation";
-@import "components/like";
 
 @import "layout/header";
 @import "layout/footer";
