--- a/SaSS/layout/_list-restaurants.scss
+++ b/SaSS/layout/_list-restaurants.scss
@@ -49,9 +49,11 @@
         }
     }
 }
-.coeur__list{
+.like{
     position: absolute;
-    right: 7px;
+    top: 0px;
+    right: 10px;   
+    font-size: 20px;
 }
 
 @media(min-width: 1440px){
