--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -1,3 +1,71 @@
+.loader {
+  opacity: 1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.loader__1, .loader__3, .loader__5 {
+  border: 10px solid #9356DC;
+  height: 1px;
+  animation: barre-grandit 1.5s ease-in-out forwards;
+  animation-duration: 3s;
+}
+.loader__2, .loader__4 {
+  border: 10px solid #FF79DA;
+  animation: barre-grandit-2 1.5s ease-in-out forwards;
+  animation-duration: 3s;
+}
+.loader__3 {
+  border: 10px solid #99E2D0;
+}
+.loader__4 {
+  border: 10px solid #353535;
+}
+.loader__5 {
+  border: 10px solid #9356DC;
+}
+
+@keyframes barre-grandit {
+  0% {
+    transform: scaleX(0.1);
+  }
+  50% {
+    transform: scaleY(3);
+  }
+  100% {
+    transform: scaleX(0.1);
+    opacity: 0;
+  }
+}
+@keyframes barre-grandit-2 {
+  0% {
+    transform: scaleY(3);
+  }
+  50% {
+    transform: scaleX(0.1);
+  }
+  100% {
+    transform: scaleY(3);
+    opacity: 0;
+  }
+}
+/*body{
+    opacity: 0;
+    animation: affichage 3s ease-in-out forwards;
+    animation-delay: 2s;
+}
+@keyframes affichage{
+  0%{
+        opacity:0;
+  }
+  100%{
+        opacity:1;
+  }
+}*/
 * {
   text-decoration: none;
   color: inherit;
@@ -55,11 +123,16 @@ body .body__div {
   width: 60px;
 }
 .card:hover .card__prix {
-  width: 90px;
+  transform: translateX(-50px);
 }
 
 .volet__hover {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  font-size: 20px;
   top: 0;
   right: 0;
   width: 0px;
@@ -69,37 +142,6 @@ body .body__div {
   transition: width 200ms;
 }
 
-/*.like__conteneur {
-    position: relative; 
-    display: flex; 
-    align-items: center;
-    justify-content: center;
-    width: auto; 
-    height: auto;
-    cursor: pointer;
-    padding: 10px;
-  bottom:2px;
-
-  & i{
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 20px;
-    transition: opacity 200ms ease;
-  }
-  .coeur{
-   position: absolute;
-  opacity: 1;
-  top:0px;
-  }
-  .coeur__hover{
-  position: absolute;
-  opacity: 0;
-  color: green;
-  display: inline-block;
-  bottom: 0px;
-  }
-}*/
 header {
   background-color: #f6f6f6;
   display: flex;
@@ -245,9 +287,11 @@ footer ul li .fa-solid {
   border-radius: 30px 30px 0 0;
 }
 
-.coeur__list {
+.like {
   position: absolute;
-  right: 7px;
+  top: 0px;
+  right: 10px;
+  font-size: 20px;
 }
 
 @media (min-width: 1440px) {
@@ -354,7 +398,7 @@ footer ul li .fa-solid {
 .card .card__prix {
   font-size: 15px;
   white-space: nowrap;
-  transition: width 200ms;
+  transition: transform 150ms ease;
 }
 .card__contenu {
   display: flex;
@@ -362,15 +406,12 @@ footer ul li .fa-solid {
   padding-top: 5px;
 }
 
-.like {
+.coeur {
   position: absolute;
   top: 0;
   left: 0;
   font-size: 20px;
   transition: opacity 200ms ease;
-}
-
-.coeur {
   opacity: 1;
 }
 
@@ -378,8 +419,16 @@ footer ul li .fa-solid {
   opacity: 0;
   background-image: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   display: inline-block;
+}
+
+.coeur__list {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  font-size: 20px;
 }
 
 @media (min-width: 1440px) {
