style: modification de la div "fonctionnement" et du hover sur le like

--- a/SaSS/base/_colors.scss
+++ b/SaSS/base/_colors.scss
@@ -7,4 +7,5 @@ $gradient-color: linear-gradient(
   rgba(255, 121, 218, 1) 0%,
   rgba(147, 86, 220, 1) 100%
 );
-
+$new-color: #99E2D0;
+$new-text-color: #008766;
