--- a/SaSS/layout/_fonctionnement.scss
+++ b/SaSS/layout/_fonctionnement.scss
@@ -1,17 +1,33 @@
 .fonctionnement{
-    margin: 10px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    background-color: white;
     &__list{
         position: relative;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 10px;
         padding: 20px;
         border-radius: 20px;
         background-color: #F6F6F6;
         box-shadow: 0px 4px 15px 0px #00000026;
         margin-left: 10px;
+        margin-top: 15px;
+        animation: fadeIn 5s ease-in-out forwards;
+    }
+    &__desktop{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 50px;
+    }
+    &__txt{
+        display: flex;
+        gap: 15px;
     }
     .fa-store{
         color: $primary-color;
@@ -33,7 +49,7 @@
 }
 
 @media(min-width: 1440px){
-    .fonction__desktop{
+    .fonctionnement__desktop{
         display: flex;
         flex-direction: row;
         justify-content: center;
