--- a/SaSS/layout/_footer.scss
+++ b/SaSS/layout/_footer.scss
@@ -24,11 +24,20 @@ footer{
 }
 
 @media(min-width: 1440px){
-    footer ul, footer h3{
-        display: flex;
-        flex-direction: row;
-        justify-content: right;
-        gap: 15px;
+    .footer__main{
+    display:flex;
+    justify-content: flex-start;
+    flex-direction:row-reverse;
+    align-items:center;
+    gap: 10px;
+  }
+  footer ul{
+    flex-direction: row;
+    padding-top:40px;
+    gap: 15px;
+  }
+    footer h3{
+        padding-right: 15px;
     }
 }
 
