--- a/SaSS/layout/_fonctionnement.scss
+++ b/SaSS/layout/_fonctionnement.scss
@@ -3,6 +3,9 @@
     flex-direction: column;
     gap: 20px;
     background-color: white;
+    &__title{
+        margin-left: 20px;
+    }
     &__list{
         position: relative;
         display: flex;
@@ -46,6 +49,22 @@
         font-weight: bold;
     }
 }
+@media(min-width: 1024px){
+    .fonctionnement__desktop{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 50px;
+
+        .fonctionnement__list{
+            width: 21%;
+        }
+        
+    }
+    .fonctionnement__title{
+            padding-left: 55px;
+        }
+}
 
 @media(min-width: 1440px){
     .fonctionnement__desktop{
@@ -60,6 +79,7 @@
         
     }
     .fonctionnement__title{
-            padding-left: 320px;
+            padding-left: 300px;
         }
 }
+
