--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -11,7 +11,6 @@
 .button__position{
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
 }
 .position{
     margin-left: 15px;
@@ -30,6 +29,9 @@
     height: 2px;
     background-color: $tertiary-color;
     position: absolute;
+}
+.cards__main{
+    padding-bottom: 30px;
 }
 .card{
     opacity: 0;
