--- a/SaSS/layout/_fonctionnement.scss
+++ b/SaSS/layout/_fonctionnement.scss
@@ -67,19 +67,25 @@
 }
 
 @media(min-width: 1440px){
+    .fonctionnement{
+        justify-content: center;
+        align-items: center;
+    }
     .fonctionnement__desktop{
         display: flex;
         flex-direction: row;
         justify-content: center;
         gap: 50px;
-
+        width: 70%;
         .fonctionnement__list{
             width: 20%;
         }
         
     }
     .fonctionnement__title{
-            padding-left: 300px;
+        width: 60%;
+        text-align: left;
+        margin-left: 80px;
         }
 }
 
