--- a/SaSS/layout/_nav.scss
+++ b/SaSS/layout/_nav.scss
@@ -2,6 +2,9 @@
     padding: 15px;
     display: flex;
     justify-content: center;
+    box-shadow: 0px 2px 4px 0px #00000026;
+    position: relative;
+    z-index: 2;
 }   
 .nav__loc{
     display: flex;
@@ -10,6 +13,7 @@
     box-shadow: 0px 4px 4px 0px #00000040;
     background-color: #EAEAEA;
     gap: 17px;
+    position: relative;
 }
 .nav__restaurant{
     display: flex;
