--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -107,6 +107,7 @@ body .body__div {
   padding: 15px;
   width: 200px;
   text-align: center;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
 }
 
 /* carte des restaurant/ index */
@@ -280,17 +281,24 @@ footer ul li .fa-solid {
   }
 }
 @media (min-width: 1440px) {
+  .fonctionnement {
+    justify-content: center;
+    align-items: center;
+  }
   .fonctionnement__desktop {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 50px;
+    width: 70%;
   }
   .fonctionnement__desktop .fonctionnement__list {
     width: 20%;
   }
   .fonctionnement__title {
-    padding-left: 300px;
+    width: 60%;
+    text-align: left;
+    margin-left: 80px;
   }
 }
 .restaurant {
@@ -418,6 +426,9 @@ footer ul li .fa-solid {
   padding: 15px;
   display: flex;
   justify-content: center;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
+  position: relative;
+  z-index: 2;
 }
 
 .nav__loc {
@@ -427,6 +438,7 @@ footer ul li .fa-solid {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
   background-color: #EAEAEA;
   gap: 17px;
+  position: relative;
 }
 
 .nav__restaurant {
@@ -461,7 +473,6 @@ footer ul li .fa-solid {
 .button__position {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
 }
 
 .position {
@@ -481,6 +492,10 @@ footer ul li .fa-solid {
   height: 2px;
   background-color: #99E2D0;
   position: absolute;
+}
+
+.cards__main {
+  padding-bottom: 30px;
 }
 
 .card {
