--- a/SaSS/components/_animation.scss
+++ b/SaSS/components/_animation.scss
@@ -24,6 +24,7 @@
     transition: filtre 0.3s;
     &:hover{
         filter: brightness(1.07);
+        box-shadow: 0px 6px 15px #00000040 ;
     }
 }
 
