--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -70,7 +70,7 @@ main {
     opacity: 1;
   }
 }
-/*apparition card restaurants*/
+/*apparition card menu restaurants*/
 @keyframes apparition {
   0% {
     opacity: 0;
@@ -132,6 +132,7 @@ body .body__div {
 }
 .buttons:hover {
   filter: brightness(1.07);
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2509803922);
 }
 
 /* volet sur les plats*/
